--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,155 +1,52 @@
-name: Build
+# A clean, modern workflow to build the Android APK
+name: Build Android APK
 
 on:
   push:
     branches:
-      - "**"
+      - "**" # Runs on any push to any branch
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Check out the repository's code
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v2
-#        with:
-#          #node-version: 20.18.1
-#          node-version: 12
-
-#      - name: Install dependencies
-#        run: npm install
-#        working-directory: telon-gateway-app
-#
-#      - name: Run tests
-#        run: npm test
-
-  build_android:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '8' # Требуется Java 8 для Gradle
-
-      - name: Cache Node.js
-        uses: actions/cache@v4
+      # 2. Set up the correct Java version required for modern Android builds
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-            path: ~/.npm
-            key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-            restore-keys: |
-              ${{ runner.os }}-node-modules-
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      # 3. Set up the correct Node.js version (18+) as required by the dependencies
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 12
+          node-version: '18'
+          # Use caching for yarn to speed up subsequent builds
+          cache: 'yarn'
 
+      # 4. Install dependencies using the correct package manager (Yarn)
+      - name: Install Yarn Dependencies
+        run: yarn install
 
-      - name: Set up OpenJDK 8
-        run: |
-          sudo apt update
-          sudo apt install openjdk-8-jdk
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v2
-      #  with:
-            #distribution: 'temurin'
-            #java-version: '8'
-            #distribution: 'adoptopenjdk'
-      #- name: Setup Java 17
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '17'
-
-      #- name: Setup Node.js
-      #  uses: actions/setup-node@v2
-      #  with:
-      #    node-version: 12
-      #    #node-version: 18.19.0
-
-      - name: Setup Android SDK (API Level 19)
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 19
-          ndk: true
-          build-tools: 25.2.5
-      #    build-tools: 30.0.3
-
-
-      #- name: Install NDK (if required)
-      #  run: |
-      #    sdkmanager "ndk;21.4.7075529"
-      #    echo "ndk.dir=/usr/local/lib/android/sdk/ndk/21.4.7075529" >> android/local.properties
-      #  working-directory: telon-gateway-app        
-      #  env:
-      #    ANDROID_HOME: ${{ runner.tool_cache }}/android-sdk
-      #    PATH: $PATH:${{ runner.tool_cache }}/android-sdk/cmdline-tools/latest/bin
-
-      - name: Download NDK r17b
-        run: |
-          curl -o android-ndk-r17b-linux-x86_64.zip https://dl.google.com/android/repository/android-ndk-r17b-linux-x86_64.zip
-          unzip android-ndk-r17b-linux-x86_64.zip -d $HOME/android-ndk
-          rm android-ndk-r17b-linux-x86_64.zip
-
-      - name: Set NDK path
-        run: |
-          echo "NDK_HOME=$HOME/android-ndk/android-ndk-r17b" >> $GITHUB_ENV
-          echo "ANDROID_NDK_HOME=$HOME/android-ndk/android-ndk-r17b" >> $GITHUB_ENV
-          echo "ndk.dir=$HOME/android-ndk/android-ndk-r17b" > $GITHUB_WORKSPACE/local.properties
-
-      - name: Verify NDK installation
-        run: |
-          echo "NDK_HOME=$NDK_HOME"
-          ls -la $NDK_HOME
-
-      - name: Navigate to Project Root
-        run: cd $GITHUB_WORKSPACE
-        working-directory: telon-gateway-app
-
-      - name: Install Dependencies
-        run: npm install
-        working-directory: telon-gateway-app
-
-
-      - name: Build Android App Bundle
-        run: |
-          mkdir -p android/app/build/intermediates/assets/release/
-          npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/build/intermediates/assets/release/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release
-        working-directory: telon-gateway-app
-
-      - name: Build Android Release
+      # 5. Build the Android APK
+      #    - cd into the 'android' directory
+      #    - chmod +x gradlew makes sure the Gradle wrapper is executable
+      #    - ./gradlew assembleRelease builds the release APK
+      - name: Build Android Release APK
         run: |
           cd android
-          chmod +x gradlew 
-          ./gradlew clean
-          #!./gradlew wrapper --gradle-version 6.2.2 --distribution-type all
-          ./gradlew bundleRelease -Pkeystore.password=${{ secrets.KEYSTORE_PASSWORD }}
-        working-directory: telon-gateway-app
+          chmod +x gradlew
+          ./gradlew assembleRelease
 
-  download_bundle:
-    runs-on: ubuntu-latest
-
-    needs: build_android
-
-    steps:
-      - name: Download Android App Bundle
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/dist
-          cp $GITHUB_WORKSPACE/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist
-        working-directory: telon-gateway-app
-
-
-      - name: Archive Bundle
-        uses: actions/upload-artifact@v2
+      # 6. Upload the generated APK as a downloadable artifact
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: android-bundle
-          path: $GITHUB_WORKSPACE/dist
+          name: gsm-sip-gateway-apk
+          path: android/app/build/outputs/apk/release/app-release.apk
