--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,145 +11,196 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive  # This ensures all submodules are checked out
 
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v2
-#        with:
-#          #node-version: 20.18.1
-#          node-version: 12
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'  # Updated to meet react-native@0.80.0 requirements
+          cache: 'npm'
+          cache-dependency-path: telon-gateway-app/package-lock.json
 
-#      - name: Install dependencies
-#        run: npm install
-#        working-directory: telon-gateway-app
-#
-#      - name: Run tests
-#        run: npm test
+      - name: Install dependencies
+        run: npm ci  # Use npm ci for faster, reliable builds
+        working-directory: telon-gateway-app
+
+      - name: Run tests
+        run: npm test
+        working-directory: telon-gateway-app
 
   build_android:
     runs-on: ubuntu-latest
-
     needs: build
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '8' # Требуется Java 8 для Gradle
-
-      - name: Cache Node.js
-        uses: actions/cache@v4
+        uses: actions/checkout@v4
         with:
-            path: ~/.npm
-            key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-            restore-keys: |
-              ${{ runner.os }}-node-modules-
+          submodules: recursive  # Ensure submodules are available
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: 12
+          node-version: '18'  # Updated to meet requirements
+          cache: 'npm'
+          cache-dependency-path: telon-gateway-app/package-lock.json
 
-
-      - name: Set up OpenJDK 8
-        run: |
-          sudo apt update
-          sudo apt install openjdk-8-jdk
-      #- name: Setup Java 8
-      #  uses: actions/setup-java@v2
-      #  with:
-            #distribution: 'temurin'
-            #java-version: '8'
-            #distribution: 'adoptopenjdk'
-      #- name: Setup Java 17
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'temurin'
-      #    java-version: '17'
-
-      #- name: Setup Node.js
-      #  uses: actions/setup-node@v2
-      #  with:
-      #    node-version: 12
-      #    #node-version: 18.19.0
-
-      - name: Setup Android SDK (API Level 19)
-        uses: android-actions/setup-android@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          api-level: 19
-          ndk: true
-          build-tools: 25.2.5
-      #    build-tools: 30.0.3
+          java-version: '11'
+          distribution: 'temurin'
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          api-level: 33  # Updated to a more recent API level
+          target: default
+          arch: x86_64
+          profile: Nexus 6
+          script: echo "Generated AVD snapshot for caching."
 
-      #- name: Install NDK (if required)
-      #  run: |
-      #    sdkmanager "ndk;21.4.7075529"
-      #    echo "ndk.dir=/usr/local/lib/android/sdk/ndk/21.4.7075529" >> android/local.properties
-      #  working-directory: telon-gateway-app        
-      #  env:
-      #    ANDROID_HOME: ${{ runner.tool_cache }}/android-sdk
-      #    PATH: $PATH:${{ runner.tool_cache }}/android-sdk/cmdline-tools/latest/bin
-
-      - name: Download NDK r17b
+      - name: Install Android SDK components
         run: |
-          curl -o android-ndk-r17b-linux-x86_64.zip https://dl.google.com/android/repository/android-ndk-r17b-linux-x86_64.zip
-          unzip android-ndk-r17b-linux-x86_64.zip -d $HOME/android-ndk
-          rm android-ndk-r17b-linux-x86_64.zip
+          yes | sdkmanager --licenses
+          sdkmanager "platforms;android-33" "build-tools;33.0.2" "ndk;25.1.8937393"
 
-      - name: Set NDK path
+      - name: Set environment variables
         run: |
-          echo "NDK_HOME=$HOME/android-ndk/android-ndk-r17b" >> $GITHUB_ENV
-          echo "ANDROID_NDK_HOME=$HOME/android-ndk/android-ndk-r17b" >> $GITHUB_ENV
-          echo "ndk.dir=$HOME/android-ndk/android-ndk-r17b" > $GITHUB_WORKSPACE/local.properties
+          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+          echo "NDK_HOME=$ANDROID_HOME/ndk/25.1.8937393" >> $GITHUB_ENV
 
-      - name: Verify NDK installation
+      - name: Create local.properties
         run: |
-          echo "NDK_HOME=$NDK_HOME"
-          ls -la $NDK_HOME
+          echo "sdk.dir=$ANDROID_HOME" > telon-gateway-app/android/local.properties
+          echo "ndk.dir=$ANDROID_HOME/ndk/25.1.8937393" >> telon-gateway-app/android/local.properties
 
-      - name: Navigate to Project Root
-        run: cd $GITHUB_WORKSPACE
+      - name: Check for missing dependencies
+        run: |
+          # Check if the problematic dependency exists
+          if [ ! -d "../react-native-replace-dialer" ]; then
+            echo "react-native-replace-dialer not found. This might be a local dependency issue."
+            # You might need to create a placeholder or remove this dependency
+          fi
         working-directory: telon-gateway-app
 
       - name: Install Dependencies
-        run: npm install
+        run: |
+          # Try to install dependencies, handling the missing local package
+          npm ci || (
+            echo "npm ci failed, trying to fix package.json issues..."
+            # Remove problematic local dependency if it doesn't exist
+            if [ ! -d "../react-native-replace-dialer" ]; then
+              npm uninstall react-native-replace-dialer || true
+            fi
+            npm ci
+          )
         working-directory: telon-gateway-app
 
+      - name: Make Gradlew executable
+        run: chmod +x gradlew
+        working-directory: telon-gateway-app/android
 
-      - name: Build Android App Bundle
+      - name: Clean Gradle
+        run: ./gradlew clean
+        working-directory: telon-gateway-app/android
+
+      - name: Generate React Native Bundle
         run: |
           mkdir -p android/app/build/intermediates/assets/release/
-          npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/build/intermediates/assets/release/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release
+          npx react-native bundle \
+            --platform android \
+            --dev false \
+            --entry-file index.js \
+            --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
+            --assets-dest android/app/build/intermediates/res/merged/release/
         working-directory: telon-gateway-app
 
       - name: Build Android Release
         run: |
-          cd android
-          chmod +x gradlew 
-          ./gradlew clean
-          #!./gradlew wrapper --gradle-version 6.2.2 --distribution-type all
-          ./gradlew bundleRelease -Pkeystore.password=${{ secrets.KEYSTORE_PASSWORD }}
-        working-directory: telon-gateway-app
+          ./gradlew assembleRelease
+        working-directory: telon-gateway-app/android
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
-  download_bundle:
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-apk
+          path: telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
+
+  build_bundle:
     runs-on: ubuntu-latest
-
     needs: build_android
+    if: success()  # Only run if Android build succeeds
 
     steps:
-      - name: Download Android App Bundle
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: telon-gateway-app/package-lock.json
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install Android SDK components
         run: |
-          mkdir -p $GITHUB_WORKSPACE/dist
-          cp $GITHUB_WORKSPACE/android/app/build/outputs/bundle/release/app-release.aab $GITHUB_WORKSPACE/dist
+          yes | sdkmanager --licenses
+          sdkmanager "platforms;android-33" "build-tools;33.0.2"
+
+      - name: Create local.properties
+        run: |
+          echo "sdk.dir=$ANDROID_HOME" > telon-gateway-app/android/local.properties
+
+      - name: Install Dependencies
+        run: |
+          npm ci || (
+            echo "npm ci failed, trying to fix package.json issues..."
+            if [ ! -d "../react-native-replace-dialer" ]; then
+              npm uninstall react-native-replace-dialer || true
+            fi
+            npm ci
+          )
         working-directory: telon-gateway-app
 
+      - name: Generate React Native Bundle
+        run: |
+          mkdir -p android/app/build/intermediates/assets/release/
+          npx react-native bundle \
+            --platform android \
+            --dev false \
+            --entry-file index.js \
+            --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
+            --assets-dest android/app/build/intermediates/res/merged/release/
+        working-directory: telon-gateway-app
 
-      - name: Archive Bundle
-        uses: actions/upload-artifact@v2
+      - name: Build Android App Bundle
+        run: |
+          chmod +x gradlew
+          ./gradlew clean
+          ./gradlew bundleRelease
+        working-directory: telon-gateway-app/android
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+
+      - name: Upload AAB artifact
+        uses: actions/upload-artifact@v4
         with:
           name: android-bundle
-          path: $GITHUB_WORKSPACE/dist
+          path: telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab
