--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive  # This ensures all submodules are checked out
+          path: react-native-gsm-sip-gateway
+
+      - name: Checkout required dependencies
+        run: |
+          # Clone all required sibling repositories
+          git clone https://github.com/telon-org/react-native-tele.git
+          git clone https://github.com/telon-org/react-native-sip2.git
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -28,11 +35,11 @@ jobs:
           rm -rf node_modules
           # Generate new lock file with current Node.js version
           npm install
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Run tests
         run: npm test || echo "Tests failed or not configured - continuing build"
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
   build_android:
     runs-on: ubuntu-latest
@@ -42,7 +49,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive  # Ensure submodules are available
+          path: react-native-gsm-sip-gateway
+
+      - name: Checkout required dependencies
+        run: |
+          # Clone all required sibling repositories
+          git clone https://github.com/telon-org/react-native-tele.git
+          git clone https://github.com/telon-org/react-native-sip2.git
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -50,24 +64,20 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org/'
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
         with:
-          api-level: 33  # Updated to a more recent API level
-          target: default
-          arch: x86_64
-          profile: Nexus 6
-          script: echo "Generated AVD snapshot for caching."
+          cmdline-tools-version: '12.0'
+          accept-android-sdk-licenses: true
 
       - name: Install Android SDK components
         run: |
-          yes | sdkmanager --licenses
           sdkmanager "platforms;android-33" "build-tools;33.0.2" "ndk;25.1.8937393"
 
       - name: Set environment variables
@@ -78,41 +88,24 @@ jobs:
 
       - name: Create local.properties
         run: |
-          echo "sdk.dir=$ANDROID_HOME" > telon-gateway-app/android/local.properties
-          echo "ndk.dir=$ANDROID_HOME/ndk/25.1.8937393" >> telon-gateway-app/android/local.properties
+          echo "sdk.dir=$ANDROID_HOME" > react-native-gsm-sip-gateway/telon-gateway-app/android/local.properties
+          echo "ndk.dir=$ANDROID_HOME/ndk/25.1.8937393" >> react-native-gsm-sip-gateway/telon-gateway-app/android/local.properties
 
       - name: Install Dependencies
         run: |
-          # Handle dependency installation with potential issues
+          # Handle dependency installation
           rm -f package-lock.json
           rm -rf node_modules
-          
-          # Check if the problematic dependency exists
-          if [ ! -d "../react-native-replace-dialer" ]; then
-            echo "react-native-replace-dialer not found. Removing from package.json if present..."
-            # Create a backup and remove the problematic dependency
-            cp package.json package.json.backup
-            # Remove the dependency using node to edit JSON safely
-            node -e "
-              const fs = require('fs');
-              const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-              delete pkg.dependencies['react-native-replace-dialer'];
-              delete pkg.devDependencies['react-native-replace-dialer'];
-              fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
-            " || true
-          fi
-          
-          # Install dependencies
           npm install
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Make Gradlew executable
         run: chmod +x gradlew
-        working-directory: telon-gateway-app/android
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
 
       - name: Clean Gradle
         run: ./gradlew clean
-        working-directory: telon-gateway-app/android
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
 
       - name: Generate React Native Bundle
         run: |
@@ -123,12 +116,12 @@ jobs:
             --entry-file index.js \
             --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
             --assets-dest android/app/build/intermediates/res/merged/release/
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Build Android Release
         run: |
           ./gradlew assembleRelease
-        working-directory: telon-gateway-app/android
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
@@ -136,7 +129,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
+          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/apk/release/app-release.apk
 
   build_bundle:
     runs-on: ubuntu-latest
@@ -147,7 +140,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          path: react-native-gsm-sip-gateway
+
+      - name: Checkout required dependencies
+        run: |
+          # Clone all required sibling repositories
+          git clone https://github.com/telon-org/react-native-tele.git
+          git clone https://github.com/telon-org/react-native-sip2.git
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -155,45 +155,33 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org/'
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: '12.0'
+          accept-android-sdk-licenses: true
 
       - name: Install Android SDK components
         run: |
-          yes | sdkmanager --licenses
           sdkmanager "platforms;android-33" "build-tools;33.0.2"
 
       - name: Create local.properties
         run: |
-          echo "sdk.dir=$ANDROID_HOME" > telon-gateway-app/android/local.properties
+          echo "sdk.dir=$ANDROID_HOME" > react-native-gsm-sip-gateway/telon-gateway-app/android/local.properties
 
       - name: Install Dependencies
         run: |
           # Handle dependency installation
           rm -f package-lock.json
           rm -rf node_modules
-          
-          # Check and handle missing local dependencies
-          if [ ! -d "../react-native-replace-dialer" ]; then
-            echo "react-native-replace-dialer not found. Removing from package.json if present..."
-            cp package.json package.json.backup
-            node -e "
-              const fs = require('fs');
-              const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
-              delete pkg.dependencies['react-native-replace-dialer'];
-              delete pkg.devDependencies['react-native-replace-dialer'];
-              fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
-            " || true
-          fi
-          
           npm install
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Generate React Native Bundle
         run: |
@@ -204,14 +192,14 @@ jobs:
             --entry-file index.js \
             --bundle-output android/app/build/intermediates/assets/release/index.android.bundle \
             --assets-dest android/app/build/intermediates/res/merged/release/
-        working-directory: telon-gateway-app
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app
 
       - name: Build Android App Bundle
         run: |
           chmod +x gradlew
           ./gradlew clean
           ./gradlew bundleRelease
-        working-directory: telon-gateway-app/android
+        working-directory: react-native-gsm-sip-gateway/telon-gateway-app/android
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
@@ -219,4 +207,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: android-bundle
-          path: telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab
+          path: react-native-gsm-sip-gateway/telon-gateway-app/android/app/build/outputs/bundle/release/app-release.aab
