--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,44 +11,51 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Set up the correct Java and Node.js environments first.
+      # Step 1: Checkout the main repository into a specific subdirectory named 'main-app'.
+      - name: Checkout Main Repository
+        uses: actions/checkout@v4
+        with:
+          path: main-app
+
+      # Step 2: Clone the other required repositories into the root, alongside 'main-app'.
+      - name: Clone Sibling Dependencies
+        run: |
+          git clone https://github.com/telon-org/react-native-tele.git
+          git clone https://github.com/telon-org/react-native-sip2.git
+          git clone https://github.com/telon-org/react-native-replace-dialer.git
+
+      # Step 3: Set up Node.js.
+      - name: Set up Node.js v18
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'yarn'
+          # CRITICAL FIX: Explicitly tell the cache where to find the yarn.lock file.
+          cache-dependency-path: main-app/yarn.lock
+
+      # Step 4: Set up the Java environment.
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Set up Node.js v18
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'yarn'
-
-      # Step 2: Create the correct directory structure and clone all required repositories.
-      # This is the most critical step. It mimics the developer's local setup.
-      - name: Clone all sibling repositories
-        run: |
-          git clone https://github.com/telon-org/react-native-gsm-sip-gateway.git
-          git clone https://github.com/telon-org/react-native-tele.git
-          git clone https://github.com/telon-org/react-native-sip2.git
-          git clone https://github.com/telon-org/react-native-replace-dialer.git
-
-      # Step 3: Install dependencies from within the main app's directory.
-      # Yarn will now be able to correctly find the local 'file:../' dependencies.
+      # Step 5: Install dependencies from within the main app's directory.
+      # Yarn will see `file:../react-native-tele` and correctly find the repo cloned in Step 2.
       - name: Install Yarn Dependencies
-        working-directory: ./react-native-gsm-sip-gateway
+        working-directory: ./main-app
         run: yarn install
 
-      # Step 4: Build the release APK using the Gradle wrapper.
+      # Step 6: Build the release APK.
       - name: Build Android Release APK
-        working-directory: ./react-native-gsm-sip-gateway/android
+        working-directory: ./main-app/android
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease
 
-      # Step 5: Upload the finished APK file as a downloadable artifact.
+      # Step 7: Upload the finished APK file.
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: gsm-sip-gateway-apk
-          path: react-native-gsm-sip-gateway/android/app/build/outputs/apk/release/app-release.apk
+          path: main-app/android/app/build/outputs/apk/release/app-release.apk```
