--- a/telon-gateway-app/android/app/build.gradle
+++ b/telon-gateway-app/android/app/build.gradle
@@ -182,6 +182,7 @@ android {
 dependencies {
     implementation project(':react-native-sip2')
     implementation project(':react-native-tele')
+    implementation project(':react-native-replace-dialer')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
@@ -194,11 +195,10 @@ dependencies {
     }
 }
 
+// Removed React Native autolinking; native modules included manually above
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.implementation
     into 'libs'
 }
-
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
