Refactor Gradle configuration in build.gradle to dynamically set namespaces and buildTypes for react-native-sip2, react-native-tele, and react-native-replace-dialer, removing the need for patching in the GitHub Actions workflow.

--- a/telon-gateway-app/android/build.gradle
+++ b/telon-gateway-app/android/build.gradle
@@ -37,3 +37,20 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 }
+
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty('android')) {
+            android {
+                if (project.name in ['react-native-sip2', 'react-native-tele', 'react-native-replace-dialer']) {
+                    namespace "com.reactlibrary.${project.name.replace('-', '')}"
+                    buildTypes {
+                        release {
+                            minifyEnabled false
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
