--- a/telon-gateway-app/android/build.gradle
+++ b/telon-gateway-app/android/build.gradle
@@ -2,18 +2,17 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "34.0.0"
+        buildToolsVersion = "28.0.3"
         minSdkVersion = 21
-        compileSdkVersion = 34
-        targetSdkVersion = 34
-        ndkVersion = "26.1.10909125"
+        compileSdkVersion = 28
+        targetSdkVersion = 28
     }
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:8.4.0")
+        classpath("com.android.tools.build:gradle:3.5.3")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,10 +30,9 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
         google()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
+        jcenter()
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
