--- a/telon-gateway-app/android/settings.gradle
+++ b/telon-gateway-app/android/settings.gradle
@@ -1,18 +1,6 @@
 rootProject.name = 'teleexample'
 
-// Removed React Native autolinking; manually include native modules instead
+apply from: new File(rootProject.projectDir, "../node_modules/@react-native-community/cli-platform-android/native_modules.gradle")
+applyNativeModulesSettings(settings)
+
 include ':app'
-
-// Include react-native dependencies manually
-include ':react-native-sip2'
-project(':react-native-sip2').projectDir = file('../node_modules/react-native-sip2/android')
-
-include ':react-native-tele'
-project(':react-native-tele').projectDir = file('../node_modules/react-native-tele/android')
-
-include ':react-native-replace-dialer'
-project(':react-native-replace-dialer').projectDir = file('../node_modules/react-native-replace-dialer/android')
-
-// The 'applyNativeModulesSettings(settings)' line above handles including your
-// dependencies like 'react-native-sip2' and 'react-native-tele' automatically.
-// You do not need to include them manually.
