--- a/telon-gateway-app/package.json
+++ b/telon-gateway-app/package.json
@@ -13,28 +13,29 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-native": "0.80.0",
+    "react": "16.11.0",
+    "react-native": "0.62.2",
     "react-native-console-panel": "^0.1.0",
     "react-native-device-info": "^10.12.0",
-    "react-native-replace-dialer": "file:./react-native-replace-dialer",
+    "react-native-replace-dialer": "^0.4.0",
     "react-native-sip2": "https://github.com/telon-org/react-native-sip2",
     "react-native-tele": "https://github.com/telon-org/react-native-tele"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/runtime": "^7.24.0",
-    "@react-native-community/cli": "^18.0.0",
-    "@react-native-community/cli-platform-android": "^18.0.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
-    "metro-react-native-babel-preset": "^0.77.0",
-    "react-test-renderer": "19.1.0"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "patch-package": "^6.2.2",
+    "postinstall-post-install": "^2.0.0",
+    "react-test-renderer": "16.11.0"
   },
   "jest": {
     "preset": "react-native"
