--- a/telon-gateway-app/android/build.gradle
+++ b/telon-gateway-app/android/build.gradle
@@ -2,18 +2,19 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.3"
+        buildToolsVersion = "34.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 28
-        targetSdkVersion = 28
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        ndkVersion = "25.2.9519653"
     }
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
-
+        classpath("com.android.tools.build:gradle:8.4.1")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,34 +22,8 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
-        }
-        maven {
-            // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
-        }
         google()
+        mavenCentral()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
-    }
-}
-
-subprojects {
-    afterEvaluate {project ->
-        if (project.hasProperty('android')) {
-            android {
-                if (project.name in ['react-native-sip2', 'react-native-tele', 'react-native-replace-dialer']) {
-                    namespace "com.reactlibrary.${project.name.replace('-', '')}"
-                    buildTypes {
-                        release {
-                            minifyEnabled false
-                        }
-                    }
-                }
-            }
-        }
     }
 }
