--- a/telon-gateway-app/package.json
+++ b/telon-gateway-app/package.json
@@ -3,6 +3,7 @@
   "main": "index.js",
   "description": "Example of react-native-tele for React Native",
   "version": "0.0.1",
+  "private": true,
   "author": {
     "name": "Anton Dodonov",
     "email": "cpodimas@gmail.com"
@@ -13,31 +14,35 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "postinstall": "patch-package"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
     "react-native-console-panel": "^0.1.0",
     "react-native-device-info": "^10.12.0",
-    "react-native-replace-dialer": "^0.4.0",
+    "react-native-replace-dialer": "file:./react-native-replace-dialer",
     "react-native-sip2": "https://github.com/telon-org/react-native-sip2",
     "react-native-tele": "https://github.com/telon-org/react-native-tele"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
-    "patch-package": "^6.2.2",
-    "postinstall-post-install": "^2.0.0",
-    "react-test-renderer": "16.11.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.74.85",
+    "@react-native/eslint-config": "0.74.85",
+    "@react-native/metro-config": "0.74.85",
+    "@react-native/typescript-config": "0.74.85",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=18"
   }
 }
